--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,17 @@ spring.thymeleaf.cache=false
 # Spring Security
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 #  Spring Security OAuth2 cho Google
+spring.security.oauth2.client.registration.google.client-id=871217938432-1ov9csd4juv3kubv24mba47kmcptm57m.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.google.redirect-uri-template={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.google.client-name=Google
 
+#  provider cho Google
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://openidconnect.googleapis.com/v1/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
 server.port=8080
 # --- C\u1ea5u h\u00ecnh Undertow ---
 
@@ -30,13 +40,14 @@ server.undertow.threads.io-threads=200
 server.undertow.threads.worker-threads=200
 
 # K\u00edch th\u01b0\u1edbc b\u1ed9 \u0111\u1ec7m (buffer size) cho Undertow
-server.undertow.buffer-size=16384
+server.undertow.buffer-size=131072
+
 
 # S\u1eed d\u1ee5ng b\u1ed9 \u0111\u1ec7m tr\u1ef1c ti\u1ebfp \u0111\u1ec3 c\u1ea3i thi\u1ec7n hi\u1ec7u su\u1ea5t
 server.undertow.direct-buffers=true
 
 # Th\u1eddi gian ch\u1edd t\u1ed1i \u0111a (ms) tr\u01b0\u1edbc khi k\u1ebft n\u1ed1i b\u1ecb \u0111\u00f3ng do kh\u00f4ng c\u00f3 ho\u1ea1t \u0111\u1ed9ng
-server.undertow.idle-timeout=6000000  # 10 ph\u00fat
+server.undertow.idle-timeout=6000000  # 10 pht
 
 # Gi\u1edbi h\u1ea1n k\u00edch th\u01b0\u1edbc file c\u00f3 th\u1ec3 t\u1ea3i l\u00ean ho\u1eb7c truy\u1ec1n qua request (n\u1ebfu s\u1eed d\u1ee5ng multipart)
 spring.servlet.multipart.max-file-size=200MB
@@ -60,4 +71,8 @@ server.compression.enabled=true
 server.compression.mime-types=text/html,text/xml,text/plain,application/javascript,application/json
 server.compression.min-response-size=1024
 
-
+spring.web.resources.static-locations=file:///C:/Users/hlongday/Downloads/thumbnails/
+spring.mvc.static-path-pattern=/thumbnails/**
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
